# kubefall

./: README.md  kubefall.py  kubefall_exam.py  pyproject.toml
campaign/: zone01_pods.yaml  zone02_deployments.yaml  zone03_services.yaml  zone04_config.yaml  zone05_debugging.yaml  zone06_cluster_triage.yaml  zone07_namespaces.yaml  zone08_apply_rbac.yaml
docs/: NOTES.md
src/kubefall/: __init__.py  art.py  battle.py  campaign.py  display.py  engine.py  world.py
tests/: test_battle_io.py  test_campaign_world.py  test_matcher.py  test_solve_dryrun.py  test_srs.py
